--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <main class="jumbotron">
     
     <p>
-      <img class="imageInText" src="Images/buffWizard.jpg" alt="I'm a buff magic boi">
+      <img class="imageInText" src="./Images/buffWizard.jpg" alt="I'm a buff magic boi">
       <!-- lyrics to "Indestructable" by Disturbed -->
       Another mission,
       the powers have called me away.
