--- a/portfolio.html
+++ b/portfolio.html
@@ -46,37 +46,37 @@
   <main class="container">
     <div class="row">
       <figure class="card bg-info text-center col-12 col-sm-6 col-md-4" style="width: 18rem;">
-        <img class="card-img-top" src="images/hydra.jpg" alt="The fearsome hydra">
+        <img class="card-img-top" src="./Images/hydra.jpg" alt="The fearsome hydra">
         <figcaption class="card-body">
           <p class="card-text">I defeated the hydra and fulfilled the prophesy.</p>
         </figcaption>
       </figure>
       <figure class="card bg-success text-center col-12 col-sm-6 col-md-4" style="width: 18rem;">
-        <img class="card-img-top" src="images/bagels.jpg" alt="Yummy Bagels">
+        <img class="card-img-top" src="./Images/bagels.jpg" alt="Yummy Bagels">
         <figcaption class="card-body">
           <p class="card-text">I invented bagels.</p>
         </figcaption>
       </figure>
       <figure class="card bg-danger text-center col-12 col-sm-6 col-md-4" style="width: 18rem;">
-        <img class="card-img-top" src="images/ameliaEarhart.jpg" alt="Amelia Earhart">
+        <img class="card-img-top" src="./Images/ameliaEarhart.jpg" alt="Amelia Earhart">
         <figcaption class="card-body">
           <p class="card-text">I was the first female aviator to fly solo across the Atlantic Ocean.</p>
         </figcaption>
       </figure>
       <figure class="card bg-primary text-center col-12 col-sm-6 col-md-4" style="width: 18rem;">
-        <img class="card-img-top" src="images/swimming.jpg" alt="Girl swimming in pool">
+        <img class="card-img-top" src="./Images/swimming.jpg" alt="Girl swimming in pool">
         <figcaption class="card-body">
           <p class="card-text">I can hold my breath for 2.38 minutes.</p>
         </figcaption>
       </figure>
       <figure class="card bg-warning text-center col-12 col-sm-6 col-md-4" style="width: 18rem;">
-        <img class="card-img-top" src="images/chicken.jpeg" alt="Terrifying close-up of a chicken's angry face">
+        <img class="card-img-top" src="./Images/chicken.jpeg" alt="Terrifying close-up of a chicken's angry face">
         <figcaption class="card-body">
           <p class="card-text">I DON'T have a crippling fear of chickens.</p>
         </figcaption>
       </figure>
       <figure class="card bg-secondary text-center col-12 col-sm-6 col-md-4" style="width: 18rem;">
-        <img class="card-img-top" src="images/armsOutstretched.jpg" alt="lady holding out arms">
+        <img class="card-img-top" src="./Images/armsOutstretched.jpg" alt="lady holding out arms">
         <figcaption class="card-body">
           <p class="card-text">I once caught a fish THIS big.</p>
         </figcaption>
