Fixed the duplicat label 'for'

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <!-- tells the browser what goes in the tab -->
@@ -49,16 +49,16 @@
   <main class="container contactBox">
     <form>
       <div class="form-group">
-        <label for="exampleFormControlInput1">Name (Yours, not mine)</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
+        <label for="inputName">Name (Yours, not mine)</label>
+        <input type="email" class="form-control" id="inputName" placeholder="John Smith">
       </div>
       <div class="form-group">
-        <label for="exampleFormControlInput1">Email address (See above)</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        <label for="inputEmail">Email address (See above)</label>
+        <input type="email" class="form-control" id="inputEmail" placeholder="name@example.com">
       </div>
       <div class="form-group">
-        <label for="exampleFormControlTextarea1">Comments</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="I'm blown away by your handsomeness" rows="3"></textarea>
+        <label for="inputTextArea">Comments</label>
+        <textarea class="form-control" id="inputTextArea" placeholder="I'm blown away by your handsomeness" rows="3"></textarea>
       </div>
     </form>
 
