--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" name="viewport" content='maximum-scale=1.0, initial-scale=1.0, width=device-width'>
   <!-- tells the browser what goes in the tab -->
   <title>Responsive Portfolio Portfolio</title>
   <!-- reset the css of the browser to avoid shenanigans -->
